# nosferatu-rs

./: .env.development.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  docker_postgres_init.sql  justfile  tailwind.config.js
core/: Cargo.toml
core/src/: lib.rs
migrations/: 20241210180612_setup.up.sql
public/css/: output.css
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  mpsc.rs  server.rs  utils.rs
src/content/: templates.rs
src/content/templates/: i18n.rs
src/server/: common.rs  handlers.rs  public.rs
src/utils/: logger.rs
templates/: about.html  error_404.html  index.html  login.html  nav.html  panic.html
templates/layouts/: index.html
